# mesoncmake

./: README.md  meson.build
subprojects/app/: CMakeLists.txt  app.c
subprojects/sdk/: meson.build  sdk.c
